i18n: add zh-cn navigation bar

--- a/i18n/zh-cn.yaml
+++ b/i18n/zh-cn.yaml
@@ -1,1 +1,5 @@
-copyright: "© 2024 UncleChair All Right Reserved."
+officialDoc: 官方文档
+webServer: web服务
+about: 关于
+contact: 联系我 ↗
+copyright: "© 2024 UncleChair 保留所有权利。"
