Pref: add i18n text for en

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,1 +1,5 @@
+officialDoc: Official Docs
+webServer: WebServer
+about: About
+contact: Contact ↗
 copyright: "© 2024 UncleChair All Right Reserved."
